# imaginet

./: Cargo.toml  INTERNALS.md  OTHER.md  README.md  TODO.md  config.yaml  configurator.sh  conn1.conf  net.yaml  sw1.conf  tmp.yaml
.github/workflows/: ci.yaml
examples/: lab00.yaml  lab01.yaml  lab02.yaml  lab03.yaml  lab04.yaml  lab05.yaml  lab06.yaml  lab06_sw1.conf  net00.yaml  net01.yaml  net01_sw.conf  net02.yaml  open.yaml  slirp.yaml  vxvde.yaml
src/: config.rs  executor.rs  main.rs  vde.rs
src/vde/: cable.rs  connection.rs  namespace.rs  ns_starter.sh  slirp.rs  switch.rs  vxvde.rs
