[package]
name = "imaginet"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
colored = "2"
home = "0.5.11"
log = { version = "0.4.26", features = ["kv"] }
env_logger = "0.11.6"
